# Multi-omics_Biomarker_Discovery-

./: ANALYSIS_SUMMARY.md  Dockerfile  LICENSE  Makefile  README.md  demo_analysis.py  docker-compose.yml  environment.yml  pyproject.toml  real_gdsc_analysis.py  requirements.txt  simple_test.py  test_project.py
config/: __init__.py  data_sources.py  model_config.py  pathway_config.py  settings.py
data/gdsc_real/: cell_lines_real.csv  cnv_real.csv  drug_sensitivity_real.csv  mutations_real.csv
examples/: gdsc_drug_response_prediction.py
results/demo_output/: analysis_report.json  discovered_biomarkers.csv
results/real_gdsc_output/: real_gdsc_analysis_report.json  real_gdsc_biomarkers.csv
src/: __init__.py  exceptions.py
src/biomarker_discovery/: __init__.py
src/data_acquisition/: __init__.py  base.py  gdsc.py  manager.py
src/integration/: __init__.py
src/modeling/: __init__.py
src/multiomics_biomarker_discovery.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pathway_analysis/: __init__.py
src/preprocessing/: __init__.py  base.py  multiomics.py
src/utils/: __init__.py  config_loader.py  file_io.py  filesystem.py  helpers.py  logging.py
src/visualization/: __init__.py
